--- a/OpenMp_custom/OpenMp_custom.vcxproj.filters
+++ b/OpenMp_custom/OpenMp_custom.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="OpenMp_custom.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="PiCircle.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="PiCircle.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
